Week 10 update - upload images from camera roll, persistent data, several bugs squashed and code well commented. Start of research on UNUserNotificationCenter has been started, and basic local notifications for the reminder date are in effect

--- a/Freedom/Freedom/Info.plist
+++ b/Freedom/Freedom/Info.plist
@@ -45,5 +45,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allows you to add photos as icons for Freeevents and Categories</string>
 </dict>
 </plist>
